crates/cli/tests/snapshots/run_bun_test__bun__runs_package_managers.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
Error: project::task::unknown

  × Unknown task npm for project bun.
  help: Has this task been configured?



