crates/cli/tests/snapshots/run_bun_test__bun__runs_script_task.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun:viaScript
bun platform
1.2.1
▪▪▪▪ bun:viaScript (100ms)

Tasks: 1 completed
 Time: 100ms
