crates/cli/tests/snapshots/run_bun_test__bun__sets_env_vars.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:envVars
MOON_FOO=abc
MOON_BAR=123
MOON_BAZ=true
▪▪▪▪ bun:envVars (100ms)

Tasks: 1 completed
 Time: 100ms



