crates/cli/tests/snapshots/run_bun_test__bun__supports_top_level_await.snap
---
source: crates/cli/tests/run_bun_test.rs
expression: assert.output()
---
▪▪▪▪ bun install
▪▪▪▪ bun:topLevelAwait
before
awaiting
after
▪▪▪▪ bun:topLevelAwait (100ms)

Tasks: 1 completed
 Time: 100ms



